data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureNetherBridgePieces.End.md
# StructureNetherBridgePieces.End

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureNetherBridgePieces.End

## Class signature

```java
public static class StructureNetherBridgePieces.End extends StructureComponent
```

## Constructors

- `End()`
- `End(int p_i2043_1_, java.util.Random p_i2043_2_, StructureBoundingBox p_i2043_3_, int p_i2043_4_)`

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureNetherBridgePieces.End func_74971_a(java.util.List p_74971_0_, java.util.Random p_74971_1_, int p_74971_2_, int p_74971_3_, int p_74971_4_, int p_74971_5_, int p_74971_6_)`
- `protected StructureComponent getNextComponentNormal(StructureNetherBridgePieces.Start p_74963_1_, java.util.List p_74963_2_, java.util.Random p_74963_3_, int p_74963_4_, int p_74963_5_, boolean p_74963_6_)`
- `protected StructureComponent getNextComponentX(StructureNetherBridgePieces.Start p_74961_1_, java.util.List p_74961_2_, java.util.Random p_74961_3_, int p_74961_4_, int p_74961_5_, boolean p_74961_6_)`
- `protected StructureComponent getNextComponentZ(StructureNetherBridgePieces.Start p_74965_1_, java.util.List p_74965_2_, java.util.Random p_74965_3_, int p_74965_4_, int p_74965_5_, boolean p_74965_6_)`
- `protected static boolean isAboveGround(StructureBoundingBox p_74964_0_)`

## Fields

- `protected static WeightedRandomChestContent [] field_111019_a`